--- a/Discord Botum/config.json
+++ b/Discord Botum/config.json
@@ -1,6 +1,6 @@
 {
   "prefix": "!",
   "token":"ODQ4NjU4MDI0NDYxMzY5Mzg1.YLP0YA.943-xVavRRH9eQ3dUheIODcHUqU",
-  "footer":"Emerald Code - Haluk Can"
+  "footer":"Storarty'nin Mekanı"
 }
 
